[feat]chapter2 homework